# gpkg

./: .gitignore  CLAUDE.md  README.md  build-env.sh  demo.tape  install.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: ci-cuda-setup.yml
src/gpkg/: __init__.py  __main__.py  build.py  cache.py  cli.py  detect.py  doctor.py  lockfile.py  matching.py  output.py  registry.py  registry.toml
src/uvforge/: __init__.py  __main__.py  cli.py  registry.toml
tests/: test_matching.py
