[project]
name = "uvforge"
version = "0.2.0"
description = "Find prebuilt CUDA wheels, generate uv pyproject.toml"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Márk Marosi" }]
keywords = ["cuda", "wheels", "pytorch", "uv", "flash-attention", "mamba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "tomli>=2; python_version<'3.11'",
]

[project.optional-dependencies]
completion = ["argcomplete>=3"]

[project.urls]
Repository = "https://github.com/Mapika/uvforge"
Issues = "https://github.com/Mapika/uvforge/issues"

[project.scripts]
uvforge = "uvforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
