[project]
name = "gpkg"
version = "0.4.3"
description = "GPU package manager — find prebuilt CUDA wheels, build missing ones, generate uv pyproject.toml"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Márk Marosi" }]
keywords = ["cuda", "wheels", "pytorch", "uv", "flash-attention", "mamba", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "tomli>=2; python_version<'3.11'",
    "tomlkit>=0.14.0",
]

[project.optional-dependencies]
completion = ["argcomplete>=3"]

[project.urls]
Repository = "https://github.com/Mapika/gpkg"
Issues = "https://github.com/Mapika/gpkg/issues"

[project.scripts]
gpkg = "gpkg.cli:main"

[dependency-groups]
dev = ["pytest>=7", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpkg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
